strongswan-5.9.12
-----------------

- Fixed a vulnerability in charon-tkm related to processing DH public values
  that can lead to a buffer overflow and potentially remote code execution.
  This vulnerability has been registered as CVE-2023-41913.

- The new `pki --ocsp` command produces OCSP responses based on certificate
  status information provided by plugins.

  Two sources are currently available, the openxpki plugin that directly
  accesses the OpenXPKI database and the `--index` argument, which reads
  certificate status information from OpenSSL-style index.txt files.

- The cert-enroll script handles the initial enrollment of an X.509 host
  certificate with a PKI server via the EST or SCEP protocols.

  Run as a systemd timer or via a crontab entry the script daily checks the
  expiration date of the host certificate. When a given deadline is reached,
  the host certificate is automatically renewed via EST or SCEP re-enrollment
  based on the possession of the old private key and the matching certificate.

- The --priv argument for charon-cmd allows using any type of private key.

- Support for nameConstraints of type iPAddress has been added (the openssl
  plugin previously didn't support nameConstraints at all).

- SANs of type uniformResourceIdentifier can now be encoded in certificates.

- Password-less PKCS#12 and PKCS#8 files are supported.

- A new global option allows preventing peers from authenticating with trusted
  end-entity certificates (i.e. local certificates).

- ECDSA public keys that encode curve parameters explicitly are now rejected by
  all plugins that support ECDSA.

- charon-nm now actually uses the XFRM interfaces added with 5.9.10, it can
  also use the name in connection.interface-name.

- The resolve plugin tries to maintain the order of installed DNS servers.

- The kernel-libipsec plugin always installs routes even if no address is found
  in the local traffic selectors.
