@@ -183,6 +183,9 @@ charon {
     # WINS servers assigned to peer via configuration payload (CP).
     # nbns2 =
 
+    # Length of nonces in OCSP requests (1-32).
+    # ocsp_nonce_len = 32
+
     # UDP port used locally. If set to 0 a random port will be allocated.
     # port = 500
 
