@@ -31,7 +31,7 @@ fi
 : ${KERNELPATCH=ha-6.3-abicompat.patch.bz2}
 
 # strongSwan version used in tests
-: ${SWANVERSION=5.9.12}
+: ${SWANVERSION=5.9.13}
 
 # Build directory where the guest kernel and images will be built
 : ${BUILDDIR=$TESTDIR/build}
